# Disentangle

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  README.md  installation.sh  installation.txt  pyproject.toml  setup.py  twoch_pred_mmse1.txt  twoch_pred_mmse10.txt  twoch_pred_mmse50.txt
disentangle/: config_utils.py  losses.py  training.py  utils.py
disentangle/analysis/: background_threshold_estimation.py  calibration_coverage.py  calibration_coverage_grid_search.py  calibration_coverage_v2.py  contrastive_learning_utils.py  critic_notebook_utils.py  denoiser_splitter_utils.py  double_dip_utils.py  forward_operator_parameters.py  grad_viewer.py  lvae_utils.py  mmse_prediction.py  ood_detector.py  paper_plots.py  plot_utils.py  poserior_sampling_predictor.py  pred_frame_creator.py  quantifying_uncertainty.py  results_handler.py  ssl_normalization_utils.py  ssl_plots.py  stitch_prediction.py  usam_segmentation.py  visualize_like_video.py
disentangle/configs/: allencell_config.py  autoregressive_config.py  biosr_config.py  biosr_new_config.py  biosr_reconstructive_config.py  biosr_sparely_supervised_config.py  biosr_sparsely_supervised_config.py  biosr_supervised_config.py  biosr_usplit_config.py  bravenet_config.py  bravenet_hagen_config.py  bsd68_config.py  care3D_config.py  contrastive_config.py  contrastive_config_single_channel_output.py  convallaria_config.py  customdata3curve_lvae_config.py  customdata_lvae_config.py  dao3ch_config.py  dao_withinput_config.py  deepencoder_lvae_config.py  default_config.py  (+80 more)
usplit/: losses.py  training.py
(+485 files in other folders)
