[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticUnmix"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.8",
    "czifile>=2019.7.2.1",
    "deepinv>=0.3.4",
    "ipython>=8.37.0",
    "isort>=6.1.0",
    "matplotlib>=3.10.6",
    "ml-collections>=1.1.0",
    "nd2>=0.10.3",
    "nd2reader>=3.3.1",
    "pre-commit>=4.3.0",
    "python-mnist>=0.7",
    "pytorch-lightning>=2.5.5",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "tifffile>=2025.5.10",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "wandb>=0.22.1",
    "yapf>=0.43.0",
]
